# aws-iot-device-sdk-embedded-C

./: .gitignore  README.md  app.py  install.sh
demos/jobs/jobs_demo_mosquitto/: Makefile  README.md  backup_timer.c  data_struct.h  demo_config.h  jobs_demo_mosquitto.c
demos/mqtt/mqtt_demo_mutual_auth/: CMakeLists.txt  demo_config.h  mqtt_demo_mutual_auth.c
